arrange by lines

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
        <li><a id="k2">Kai2</a></li>
        <li><a id="colle">Colle</a></li>
      </ul> 
-    <div class="shiplist">
+    <div class="shiplist" style="padding: 50px">
     </div>
     
     <div class="factory">
-      <div class="ship_info" style="border:1px solid black; margin: 5px">
-        <div class="ship_tag"></div>
+      <div class="ship_info_row row"></div>
+      <div class="ship_info" style="float:left; background-color: #eee; margin: 5px; width: 80px">
+        <div class="ship_tag" style="width:100px; height: 20px overflow: hidden; white-space: nowrap" ></div>
         <img data-holder-rendered="true"
-             data-src="holder.js/200x200" class="img-thumbnail" alt="200x200">
+             data-src="holder.js/200x200" class="img-thumbnail" alt="200x200" style="width: 80px; height: 80px">
       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
