--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,15 +24,15 @@
        <li><a id="k2">Kai2</a></li>
        <li><a id="colle">Colle</a></li>
      </ul> 
-    <div class="shiplist" style="padding: 50px">
+    <div class="shiplist">
     </div>
     
     <div class="factory">
       <div class="ship_info_row row"></div>
-      <div class="ship_info" style="float:left; background-color: #eee; margin: 5px; width: 80px">
-        <div class="ship_tag" style="width:100px; height: 20px overflow: hidden; white-space: nowrap" ></div>
+      <div class="ship_info">
+        <div class="ship_tag"></div>
         <img data-holder-rendered="true"
-             data-src="holder.js/200x200" class="img-thumbnail" alt="200x200" style="width: 80px; height: 80px">
+             data-src="holder.js/200x200" class="img-thumbnail" alt="200x200">
       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
